name:                cubensis
version:             0.1.0.0
synopsis:            Example
description:         Please see README.md
homepage:            http://github.com/lukexi/cubensis#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Cubensis
  build-depends:       base
                     , gl-pal
                     , glfw-pal
                     , vr-pal
                     , linear-extra
                     , lens-extra
                     , time
                     , halive
                     , mtl
  default-language:    Haskell2010

executable cubensis
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cubensis
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/lukexi/cubensis
