name:                cubensis
version:             0.1.0.0
synopsis:            Example
description:         Please see README.md
homepage:            http://github.com/lukexi/cubensis#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  SubHalive
                    FindPackageDBs
                    Types
                    Cubensis
  ghc-options:      -Wall -O2
  build-depends:      base
                    , gl-pal
                    , glfw-pal
                    , vr-pal
                    , linear-extra
                    , lens-extra
                    , halive
                    , mtl
                    , tinyrick
                    , ghc
                    , ghc-paths
                    , bin-package-db
                    , directory
                    , filepath 
                    , fsnotify
                    , process
                    , transformers
                    , lens
                    , deepseq
  default-language:   Haskell2010
  hs-source-dirs:     src


executable cubensis
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:      base, cubensis
  default-language:   Haskell2010
  ghc-options:        -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  if !os(windows)
    ghc-options:      -dynamic


source-repository head
  type:     git
  location: https://github.com/lukexi/cubensis
